[package]
name = "hpke-dispatch"
version = "0.5.0"
edition = "2021"
description = "runtime algorithmic selection for hybrid public key encryption"
license = "MPL-2.0"
repository = "https://github.com/divviup/hpke-dispatch"
readme = "./README.md"
keywords = ["hpke", "encryption"]
categories = ["cryptography"]

[features]
cfg_eval = []
base-mode-open = []
base-mode-seal = []
serde = ["serde_crate"]
algo-all = ["aead-all", "kdf-all", "kem-all"]
default = ["algo-all", "base-mode-seal", "base-mode-open"]
aead-all = ["aead-aes-gcm-128", "aead-aes-gcm-256", "aead-chacha-20-poly-1305"]
aead-aes-gcm-128 = []
aead-aes-gcm-256 = []
aead-chacha-20-poly-1305 = []
kdf-all = ["kdf-sha256", "kdf-sha384", "kdf-sha512"]
kdf-sha256 = []
kdf-sha384 = []
kdf-sha512 = []
kem-all = ["kem-dh-p256-hkdf-sha256", "kem-x25519-hkdf-sha256"]
kem-dh-p256-hkdf-sha256 = ["hpke/p256"]
kem-x25519-hkdf-sha256 = ["hpke/x25519"]

[dependencies]
rand = "0.8.5"
num_enum = "0.7.0"
cfg-if = "1.0.0"
hpke = { version = "0.10.0", default-features = false, features = ["std"] }
zeroize = "1.3"

[dependencies.serde_crate]
version = "1.0.145"
features = ["derive"]
optional = true
package = "serde"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
getrandom = { version = "0.2.7", features = ["js", "js-sys"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dev-dependencies]
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen-test = "0.3.33"
