[package]
name = "hpke-dispatch"
version = "0.8.0"
edition = "2021"
description = "Runtime algorithm selection for hybrid public key encryption"
license = "MPL-2.0"
repository = "https://github.com/divviup/hpke-dispatch"
readme = "./README.md"
keywords = ["hpke", "encryption"]
categories = ["cryptography"]

[features]
serde = ["serde_crate"]
algo-all = ["aead-all", "kdf-all", "kem-all"]
default = ["algo-all"]
aead-all = ["aes", "chacha"]
aes = ["hpke/aes"]
chacha = ["hpke/chacha"]
kdf-all = ["hkdfsha2", "shake"]
hkdfsha2 = ["hpke/hkdfsha2"]
shake = ["hpke/shake"]
kem-all = ["x25519", "nistp", "mlkem"]
x25519 = ["hpke/x25519"]
nistp = ["hpke/nistp"]
mlkem = ["hpke/mlkem"]

[dependencies]
num_enum = "0.7.0"
hpke = { version = "0.14", default-features = false, features = ["getrandom", "alloc"] }
zeroize = "1.6"

[dependencies.serde_crate]
version = "1.0.185"
features = ["derive"]
optional = true
package = "serde"

[dev-dependencies]
hex = { version = "0.4.3", features = ["serde"] }
serde_crate = { package = "serde", version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

[package.metadata.cargo-all-features]
# These features are redundant, as they only enable other features.
denylist = ["algo-all", "aead-all", "kdf-all", "kem-all"]
# We don't use the implicit "serde_crate" feature, only our explicitly defined
# "serde" feature.
skip_optional_dependencies = true
# Allow for one KEM, one KDF, one AEAD, plus serde or another feature
max_combination_size = 4
